fix missing type conversion, test all value types